# ClusterPlot

./: pyproject.toml  setup.py
cluster_plot/: __init__.py  cluster_plot.py
examples/: Cross.ipynb  Hourglass.ipynb  MNIST_3_Levels _AE.ipynb
examples/utils/: DataSetFactory.py  PolygonsFactory.py  requirements.lst
